--- a/backEnd/.env
+++ b/backEnd/.env
@@ -1,14 +1,14 @@
 # Server Port
-PORT=3306
+PORT=
 
 # MySQL Database Configuration
-DB_HOST= sql12.freesqldatabase.com
-DB_USER=sql12786424
-DB_PASSWORD=49cqpvHEi5
-DB_NAME=sql12786424
+DB_HOST= 
+DB_USER=
+DB_PASSWORD=
+DB_NAME=
 
 # JWT Secret for Authentication Tokens
-JWT_SECRET=Emittr
+JWT_SECRET=
 
 # Kafka Broker Address
-KAFKA_BROKER=localhost:9092
+KAFKA_BROKER=
